update to eis 0.6.2, update build tools